# typed-models

./: LICENSE  README.rst  pyproject.toml  tox.ini
tests/: test_main.py
tests/field/: test_field.py  test_field_instance.py  test_field_value.py
tests/fields/: test_boolean.py  test_datetime.py  test_decimal.py  test_enum.py  test_float.py  test_integer.py  test_list.py  test_model.py  test_string.py
tests/model/: model.py  test_model.py
tests/model_meta/: model.py  test_model_meta.py
tests/serializer/: test_default_serializer.py
typed_models/: __init__.py  base.py  exceptions.py  serializer.py
typed_models/fields/: __init__.py  boolean.py  datetime.py  decimal.py  enum.py  float.py  integer.py  list.py  model.py  string.py
