[tool.poetry]
name = "typed-models"
version = "0.2.3"
description = "Strongly typed, lightweight, serializable models for Python"
authors = ["Imtiaz Mangerah <Imtiaz_Mangerah@a2d24.com>"]
license = "MIT"
readme = 'README.rst'
keywords = ['models', 'serializable', 'typed']
homepage = "https://github.com/a2d24/typed-models"
repository = "https://github.com/a2d24/typed-models"
documentation = "https://github.com/a2d24/typed-models"

[tool.poetry.dependencies]
python = "^3.6"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pygments = "^2.6.1"
pytest-cov = "^2.10.1"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
